--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -17,9 +17,10 @@
 
     Mine ==> AIzaSyD2Sk7XBo5CuuvWT3tqd169wEqpj3vy6R8
     Master ==>  AIzaSyC3xvPcfuIr63YDAiZ6UuDLj3YlrMDhpi0
+    chan ==> AIzaSyCYqOHYwgwy0YcJzAHur29VCDpUfyUdoiI
 
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        AIzaSyD2Sk7XBo5CuuvWT3tqd169wEqpj3vy6R8
+        AIzaSyCYqOHYwgwy0YcJzAHur29VCDpUfyUdoiI
     </string>
 </resources>
