--- a/app/src/main/res/layout/service_layout.xml
+++ b/app/src/main/res/layout/service_layout.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,13 +17,35 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:textColor="@color/textcolorPrimary"
-                android:textSize="@dimen/h1"
-                android:text="@string/add_children"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/add_children"
+                android:textColor="@color/textcolorPrimary"
+                android:textSize="@dimen/h1" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_back" />
+
+            <ImageView
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_save" />
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-</RelativeLayout>
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="mean.chan.mind.sendgps.MyServiceActivity" />
+
+
+</LinearLayout>
