--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="textcolorPrimary">#FFFFFF</color>
-    <color name="colorPrimarlight">#3F51B5</color>
+    <color name="colorPrimarlight">#7e1010</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
