--- a/app/src/main/res/layout/service_layout.xml
+++ b/app/src/main/res/layout/service_layout.xml
@@ -35,7 +35,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_save" />
+                android:src="@mipmap/ic_add" />
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
