--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -1,11 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg2"
     tools:context="mean.chan.mind.sendgps.CreateAccountActivity">
+
+    <!--Toolbar-->
+    <android.support.v7.widget.Toolbar
+        android:padding="10dp"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <!--back-->
+            <ImageView
+                android:id="@+id/imvBack"
+                android:src="@mipmap/ic_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <!--title-->
+            <TextView
+                android:textColor="@color/textcolorPrimary"
+                android:textSize="@dimen/h1"
+                android:layout_centerInParent="true"
+                android:text="Create Account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <!--save
+            <ImageView
+                android:id="@+id/imvSave"
+                android:layout_alignParentRight="true"
+                android:src="@mipmap/ic_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" /> -->
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:id="@+id/linTopCrateAccount"
@@ -22,7 +59,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:src="@mipmap/name"
+                android:src="@mipmap/ic_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <EditText
@@ -39,7 +76,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:src="@mipmap/username"
+                android:src="@mipmap/ic_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <EditText
@@ -56,7 +93,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:src="@mipmap/password"
+                android:src="@mipmap/ic_pass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <EditText
@@ -73,7 +110,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:src="@mipmap/repass"
+                android:src="@mipmap/ic_repass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <EditText
@@ -93,7 +130,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/gender" />
+                android:src="@mipmap/ic_gender" />
             <RadioGroup
                 android:id="@+id/ragGender"
                 android:padding="15dp"
@@ -117,20 +154,24 @@
             </RadioGroup>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/btnContCreateAccount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/btn2"
+                android:text="Continue"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnContCreateAccount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/btn2"
-        android:text="Continue"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-
-</RelativeLayout>
+</LinearLayout>
