--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,42 +8,43 @@
 
     tools:context="mean.chan.mind.sendgps.LoginActivity">
 
-    <LinearLayout
-        android:id="@+id/linLayout"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical">
+    <!--<LinearLayout-->
+        <!--android:id="@+id/linLayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:orientation="vertical">-->
 
-        <TextView
-            android:id="@+id/txtLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="#bbdefb"
-            android:gravity="center_horizontal"
-            android:text="LOGIN"
-            android:textColor="#ffffff"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+        <!--<TextView-->
+            <!--android:id="@+id/txtLogin"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:background="#bbdefb"-->
+            <!--android:gravity="center_horizontal"-->
+            <!--android:text="LOGIN"-->
+            <!--android:textColor="#ffffff"-->
+            <!--android:textSize="30sp"-->
+            <!--android:textStyle="bold" />-->
+    <!--</LinearLayout>-->
 
     <LinearLayout
+
         android:id="@+id/linTopLogin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="6"
-        android:layout_below="@id/linLayout"
+
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="300dp"
         android:orientation="vertical">
 
 
         <LinearLayout
             android:id="@+id/linTopUser"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="1dp"
             android:layout_weight="1"
             android:background="@drawable/box"
             android:orientation="horizontal">
@@ -52,7 +53,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/username" />
+                android:src="@mipmap/ic_name" />
 
             <EditText
                 android:id="@+id/edtUser"
@@ -65,7 +66,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="1dp"
             android:layout_below="@id/linTopUser"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
@@ -75,7 +76,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/password" />
+                android:src="@mipmap/ic_pass" />
 
             <EditText
                 android:id="@+id/edtPassword"
