--- a/app/src/main/res/layout/activity_add_child.xml
+++ b/app/src/main/res/layout/activity_add_child.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="mean.chan.mind.sendgps.AddChildActivity">
 
     <!--ToolBar-->
     <android.support.v7.widget.Toolbar
-        android:padding="10dp"
-        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:padding="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -20,35 +20,35 @@
             <!--back-->
             <ImageView
                 android:id="@+id/imvBack"
-                android:src="@mipmap/ic_back"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_back" />
 
             <!--title-->
             <TextView
-                android:textColor="@color/textcolorPrimary"
-                android:textSize="@dimen/h1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/add_children"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textColor="@color/textcolorPrimary"
+                android:textSize="@dimen/h1" />
 
             <!--save-->
             <ImageView
                 android:id="@+id/imvSave"
-                android:layout_alignParentRight="true"
-                android:src="@mipmap/ic_save"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:src="@mipmap/ic_save" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
 
     <!--Content-->
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <!--Left Site-->
         <RelativeLayout
@@ -59,11 +59,11 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_margin="10dp"
                 android:id="@+id/imPicture"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_centerHorizontal="true"
+                android:layout_margin="10dp"
                 android:scaleType="fitStart"
                 android:src="@drawable/ic_picture" />
 
@@ -74,87 +74,91 @@
                 android:layout_below="@+id/imPicture"
                 android:layout_centerHorizontal="true"
                 android:src="@mipmap/ic_camera" />
+
             <TextView
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/imvCamera"
-                android:text="Add Picture"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imvCamera"
+                android:layout_centerHorizontal="true"
+                android:text="Add Picture" />
 
         </RelativeLayout>
 
         <!--Right site-->
         <LinearLayout
-            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:padding="10dp">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:src="@mipmap/ic_code"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_code" />
+
                 <EditText
                     android:id="@+id/edtCode"
-                    android:hint="Code ID"
-                    android:inputType="text"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:hint="Code ID"
+                    android:inputType="text" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:src="@mipmap/ic_name"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_name" />
+
                 <EditText
                     android:id="@+id/edtName"
-                    android:hint="Name"
-                    android:inputType="text"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:hint="Name"
+                    android:inputType="text" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_gravity="top"
-                    android:src="@mipmap/ic_gender"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top"
+                    android:src="@mipmap/ic_gender" />
+
                 <RadioGroup
                     android:id="@+id/ragGender"
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <RadioButton
                         android:id="@+id/radMale"
-                        android:checked="true"
-                        android:text="Male"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:text="Male" />
 
                     <RadioButton
                         android:id="@+id/radFemale"
-                        android:text="Female"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:text="Female" />
 
                 </RadioGroup>
 
