--- a/app/src/main/res/layout/service_layout.xml
+++ b/app/src/main/res/layout/service_layout.xml
@@ -30,12 +30,29 @@
                 android:layout_height="wrap_content"
                 android:src="@mipmap/ic_back" />
 
-            <ImageView
-                android:id="@+id/imvSave"
+            <LinearLayout
                 android:layout_alignParentRight="true"
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_add" />
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/imvListView"
+                    android:src="@mipmap/ic_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+
+                <ImageView
+                    android:id="@+id/imvSave"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_add" />
+
+            </LinearLayout>
+
+
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
