add contact finish

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg2"
+
     tools:context="mean.chan.mind.sendgps.CreateAccountActivity">
 
     <!--Toolbar-->
@@ -155,16 +155,15 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btnContCreateAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/btn2"
+                android:layout_marginTop="20dp"
+                android:background="@color/colorPrimary"
                 android:text="Continue"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
