--- a/app/src/main/res/layout/activity_add_number.xml
+++ b/app/src/main/res/layout/activity_add_number.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="mean.chan.mind.sendgps.MainActivity"
+    tools:context="mean.chan.mind.sendgps.AddNumberActivity"
     >
 
     <android.support.v7.widget.Toolbar
@@ -29,17 +30,12 @@
                 android:textColor="@color/textcolorPrimary"
                 android:textSize="@dimen/h1"
                 android:layout_centerInParent="true"
-                android:text="@string/add_place"
+                android:text="@string/add_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <!--save
-            <ImageView
-                android:id="@+id/imvSave"
-                android:layout_alignParentRight="true"
-                android:src="@mipmap/ic_save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" /> -->
+
+
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
@@ -58,37 +54,39 @@
             android:layout_height="120dp"
             android:id="@+id/imageView"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/logonofill" />
+            android:src="@mipmap/ic_contact" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add Place"
+            android:text="Phone Number"
             android:id="@+id/textView"
             android:textSize="30sp"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/text" />
 
+
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="0dp"
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name :"
-                android:id="@+id/textView7"
-                android:textSize="25dp"
-                android:layout_weight="1"
-                android:textColor="@color/text" />
+                android:src="@mipmap/ic_phonename" />
 
             <EditText
+                android:id="@+id/edtName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText"
                 android:layout_weight="2"
-                android:textColor="@color/text" />
+                android:textColor="@color/text"
+                android:hint="Name" />
+
+
+
         </LinearLayout>
 
         <LinearLayout
@@ -96,58 +94,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="0dp"
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lat :"
-                android:id="@+id/textView2"
-                android:textSize="25sp"
-                android:layout_weight="1"
-                android:textColor="@color/text" />
+                android:src="@mipmap/ic_phone" />
 
-            <TextView
+            <EditText
+                android:id="@+id/edtTel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="New Text"
-                android:id="@+id/textView3"
-                android:textSize="25sp"
                 android:layout_weight="2"
-                android:textColor="@color/text" />
+                android:textColor="@color/text"
+                android:hint="PhoneNumber" />
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Lng:"
-                android:id="@+id/textView4"
-                android:textSize="25sp"
-                android:layout_weight="1"
-                android:textColor="@color/text" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="New Text"
-                android:id="@+id/textView5"
-                android:textSize="25sp"
-                android:layout_weight="2"
-                android:textColor="@color/text" />
-        </LinearLayout>
     </LinearLayout>
+
+
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save Data"
+        android:text="Save"
         android:id="@+id/button2"
         android:layout_alignParentBottom="true"
         android:textColor="@color/text"
         android:layout_margin="5dp"
         android:background="@color/colorPrimary"
         android:onClick="clickSaveData" />
+
 </RelativeLayout>
