--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#78bbcc</color>
     <color name="textcolorPrimary">#FFFFFF</color>
-    <color name="colorPrimarlight">#7e1010</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimarlight">#aaeeff</color>
+    <color name="colorPrimaryDark">#478b9b</color>
+    <color name="colorAccent">#000000</color>
 
     <color name="text">#000000</color>
 
