--- a/app/src/main/res/layout/activity_add_child.xml
+++ b/app/src/main/res/layout/activity_add_child.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +10,7 @@
 
     <!--ToolBar-->
     <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
@@ -33,19 +35,25 @@
                 android:textColor="@color/textcolorPrimary"
                 android:textSize="@dimen/h1" />
 
-            <!--save-->
+            <!--save
             <ImageView
                 android:id="@+id/imvSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:src="@mipmap/ic_save" />
+                -->
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-
+<RelativeLayout
+    android:layout_below="@+id/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <!--Content-->
     <LinearLayout
+        android:id="@+id/conTent"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
@@ -162,12 +170,33 @@
 
                 </RadioGroup>
 
-
             </LinearLayout>
 
         </LinearLayout>
 
 
+
+
     </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Save Data"
+            android:id="@+id/button2"
+            android:textColor="@color/textcolorPrimary"
+            android:layout_margin="3dp"
+            android:background="@color/colorPrimary"
+            android:onClick="saveController" />
+    </LinearLayout>
+
+</RelativeLayout>
+
+
+
+</RelativeLayout>
