--- a/app/src/main/res/layout/service_layout.xml
+++ b/app/src/main/res/layout/service_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -18,13 +19,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <LinearLayout
+                android:layout_centerInParent="true"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/add_children"
+                android:text="WATCH OVER"
                 android:textColor="@color/textcolorPrimary"
                 android:textSize="@dimen/h1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="Location Now"
+                    android:textColor="@color/textcolorPrimary"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/imvBack"
@@ -32,12 +49,14 @@
                 android:layout_height="wrap_content"
                 android:src="@mipmap/ic_back" />
 
-            <!--
+
             <LinearLayout
                 android:layout_alignParentRight="true"
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
+                <!--
 
                 <ImageView
                     android:id="@+id/imvListView"
@@ -45,16 +64,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
+                -->
 
                 <ImageView
-                    android:id="@+id/imvSave"
-
+                    android:id="@+id/imvInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_add" />
+                    android:src="@mipmap/ic_info" />
 
             </LinearLayout>
-            -->
+
 
 
         </RelativeLayout>
@@ -68,10 +87,8 @@
         android:layout_below="@+id/toolbar"
         android:layout_above="@+id/buttonBar"
         >
+
         <fragment
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:map="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
